--- a/assets/styles/less/main.less
+++ b/assets/styles/less/main.less
@@ -6,8 +6,10 @@
 * { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
 body {
-  background-image: url('../img/background.png');
-  background-repeat: repeat;
+  // The background image I was using made the text a little hard to read.
+  //background-image: url('../img/background.png');
+  //background-repeat: repeat;
+
   font-weight: @baseFontWeight;
 }
 
